--- a/tutorials/2-oligo-database.ipynb
+++ b/tutorials/2-oligo-database.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "- [Save and load a database object](#saving-and-retrieving-the-database)\n",
     "\n",
-    "- [Export an oligo database as `tsv` or `FASTA`](#exporting-the-database)\n",
+    "- [Export an oligo database as **tsv** or **FASTA**](#exporting-the-database)\n",
     "\n",
     "\n"
    ]
