add new parameter

--- a/tutorials/5-oligoset-generation.ipynb
+++ b/tutorials/5-oligoset-generation.ipynb
@@ -139,12 +139,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Set parameters\n",
-    "\n",
     "oligo_Tm_opt = 50\n",
     "oligo_GC_content_opt = 70\n",
     "oligo_isoform_weight = 2\n",
@@ -155,6 +154,7 @@
     "n_attempts = 100000\n",
     "heuristic = True\n",
     "heuristic_n_attempts = 100\n",
+    "clique_init_approximation = False\n",
     "\n",
     "max_graph_size = 5000\n",
     "distance_between_oligos = 0\n",
@@ -170,17 +170,12 @@
     "oligo_Tm_max = 75 \n",
     "\n",
     "Tm_parameters_oligo = {\n",
-    "    \"check\": True, #default\n",
-    "    \"strict\": True, #default\n",
-    "    \"c_seq\": None, #default\n",
-    "    \"shift\": 0, #default\n",
     "    \"nn_table\": \"DNA_NN3\", # Allawi & SantaLucia (1997)\n",
     "    \"tmm_table\": \"DNA_TMM1\", #default\n",
     "    \"imm_table\": \"DNA_IMM1\", #default\n",
     "    \"de_table\": \"DNA_DE1\", #default\n",
     "    \"dnac1\": 50, #[nM]\n",
     "    \"dnac2\": 0, #[nM]\n",
-    "    \"selfcomp\": False, #default\n",
     "    \"saltcorr\": 7, # Owczarzy et al. (2008)\n",
     "    \"Na\": 39, #[mM]\n",
     "    \"K\": 75, #[mM]\n",
@@ -200,14 +195,12 @@
     "    \"fmdfactor\": 0.65, #default\n",
     "    \"fmdmethod\": 1, #default\n",
     "    \"GC\": None, #default\n",
-    "}\n",
-    "\n",
-    "Tm_salt_correction_param_oligo = None # use default settings"
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +214,6 @@
     "    GC_content_max=oligo_GC_content_max,\n",
     "    Tm_parameters=Tm_parameters_oligo,\n",
     "    Tm_chem_correction_parameters=Tm_chem_correction_param_oligo,\n",
-    "    Tm_salt_correction_parameters=Tm_salt_correction_param_oligo,\n",
     "    isoform_weight=oligo_isoform_weight,\n",
     "    Tm_weight=oligo_Tm_weight,\n",
     "    GC_weight=oligo_GC_weight,\n",
@@ -237,9 +229,11 @@
    "source": [
     "## Oligo Selection Policy\n",
     "\n",
-    "The `GraphBasedSelectionPolicy` uses the scoring strategies, defined above, to iteratively select oligos that minimize the overall set score. Key features include:\n",
+    "The `GraphBasedSelectionPolicy` uses the scoring strategies, defined above, to select sets of non-overlapping oligos that minimize the overall set score. Key features include:\n",
     "\n",
-    "**Pre-Filtering:** If `pre_filter=True`, oligos are pre-filtered before set selection, which improves performance for larger sets (e.g., oligo_size_opt >= 10) but can dramatically slow down small set selection (e.g., oligo_size_opt = 5).\n",
+    "**Pre-Filtering:** If `pre_filter=True`, oligos are pre-filtered before set selection, removing oligos that cannot form sets of at least `oligo_size_min` oligos. This improves performance for larger sets (e.g., oligo_size_min > 30) but can dramatically slow down small set selection (e.g., oligo_size_min < 30).\n",
+    "\n",
+    "**Search for Initial Set:** The graph-based set selection approach starts with finding an inital set of oligos which fulfills the minimum requirements, i.e. having a size of at least `oligo_size_min`. If no initial set is found, the selection step is terminated for the respective region. If an initial set is found, this set is used as starting point for selecting optimal sets by minimizing the overall set score. For larger sets (e.g., oligo_size_min > 15) the prformance improves when we use an approximation that finds the largest non-overlapping set in the graph using `clique_init_approximation=True`, however, if the set size is small (e.g., oligo_size_min < 15) it is more efficient to iterate through all possible non-overlapping sets by setting `clique_init_approximation=False`.\n",
     "\n",
     "**Heuristic Search:** A heuristic approach is employed to optimize set selection within a feasible runtime:\n",
     "\n",
@@ -259,12 +253,14 @@
     "**Graph Constraints:**\n",
     "\n",
     "- `max_graph_size`: Limits the size of the graph for feasible computation.\n",
-    "- `distance_between_oligos`: Ensures no overlap between selected oligos."
+    "- `distance_between_oligos`: Ensures no overlap between selected oligos.\n",
+    "\n",
+    "**Note:** If `min_set_size` is set to a large value, consider switching from the graph-based selection policy to the `GreedySelectionPolicy`, as it increases the likelihood of finding large sets. However, keep in mind that the greedy approach may yield lower-scoring sets compared to the graph-based method."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,6 +270,7 @@
     "    n_attempts=n_attempts,\n",
     "    heuristic=heuristic,\n",
     "    heuristic_n_attempts=heuristic_n_attempts,\n",
+    "    clique_init_approximation=clique_init_approximation,\n",
     ")\n",
     "probeset_generator = OligosetGeneratorIndependentSet(\n",
     "    selection_policy=selection_policy,\n",
