--- a/tutorials/3-property-filters.ipynb
+++ b/tutorials/3-property-filters.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Property Filters\n",
+    "# 3. Property Filters\n",
     "\n",
     "Property filters are the first major step in refining the initial pool of oligos based on their intrinsic sequence properties. This step eliminates sequences that do not meet specific experimental criteria, such as GC content or melting temperature (Tm), which ensures that only the most suitable oligos are retained for subsequent analysis.\n"
    ]
