adapt directory generaion

--- a/tutorials/2-oligo-database.ipynb
+++ b/tutorials/2-oligo-database.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
    ],
    "source": [
     "# Save Database\n",
-    "dir_database = oligo_database.save_database(dir_database=\"1_db_oligos_initial\")\n",
+    "dir_database = oligo_database.save_database(name_database=\"1_db_oligos_initial\")\n",
     "\n",
     "# Load Database\n",
     "oligo_database.load_database(dir_database=dir_database, database_overwrite=True)"
