--- a/tutorials/3-property-filters.ipynb
+++ b/tutorials/3-property-filters.ipynb
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
     "    n_jobs=n_jobs,\n",
     ")\n",
     "\n",
-    "dir_database = oligo_database.save_database(dir_database=\"2_db_oligos_property_filter\")"
+    "dir_database = oligo_database.save_database(name_database=\"2_db_oligos_property_filter\")"
    ]
   },
   {
