--- a/tests/notebooks/test_database.ipynb
+++ b/tests/notebooks/test_database.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import shutil\n",
     "\n",
-    "from oligo_designer_toolsuite.utils import FastaParser, VCFParser\n",
+    "from oligo_designer_toolsuite.utils import FastaParser\n",
     "from oligo_designer_toolsuite.database import OligoDatabase, ReferenceDatabase, OligoAttributes\n",
     "from oligo_designer_toolsuite.sequence_generator import OligoSequenceGenerator"
    ]
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "oligo_database.load_database_from_table(FILE_DATABASE_OLIGO_ATTRIBUTES, database_overwrite=True)\n",
+    "oligo_database.load_database_from_table(FILE_DATABASE_OLIGO_ATTRIBUTES, database_overwrite=True, merge_databases_on_sequence_type=\"oligo\")\n",
     "print(oligo_database.database[\"region_1\"])\n",
     "print(oligo_database.database[\"region_2\"])\n",
     "print(oligo_database.database[\"region_3\"])"
