--- a/tests/notebooks/test_database.ipynb
+++ b/tests/notebooks/test_database.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,6 +135,415 @@
     "    length_interval_sequences=(30, 31),\n",
     "    region_ids=REGION_IDS\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fac2d62311fc4095a0dca2cf52e39950",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/lisasousa/Desktop/oligo-designer-toolsuite/oligo_designer_toolsuite/utils/_database_processor.py:181: UserWarning: Region this_gene_does_not_exist not available in reference file.\n",
+      "  warnings.warn(f\"Region {region_id} not available in reference file.\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "from oligo_designer_toolsuite.utils import check_if_list\n",
+    "from subprocess import Popen\n",
+    "\n",
+    "oligo_database.load_database_from_fasta(\n",
+    "    files_fasta=file_sliding_window,\n",
+    "    sequence_type=\"target\",\n",
+    "    region_ids=REGION_IDS,\n",
+    "    database_overwrite=True,\n",
+    ")\n",
+    "oligo_database = attribute_calculator.calculate_reverse_complement_sequence(oligo_database=oligo_database,sequence_type=\"target\", sequence_type_reverse_complement=\"oligo\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_A = oligo_database.write_database_to_bed(dir_output=\"/Users/lisasousa/Desktop/oligo-designer-toolsuite/projects/SNP_filter/\",region_ids=REGION_IDS)\n",
+    "file_B = '/Users/lisasousa/Desktop/oligo-designer-toolsuite/projects/SNP_filter/GCF_000001405.40.chr16.vcf'\n",
+    "file_bed_out = '/Users/lisasousa/Desktop/oligo-designer-toolsuite/projects/SNP_filter/overlap.bed'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bedtools intersect -wa -wb -bed -a /Users/lisasousa/Desktop/oligo-designer-toolsuite/projects/SNP_filter/db_oligo.bed -b /Users/lisasousa/Desktop/oligo-designer-toolsuite/projects/SNP_filter/GCF_000001405.40.chr16.vcf > /Users/lisasousa/Desktop/oligo-designer-toolsuite/projects/SNP_filter/overlap.bed\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_B = check_if_list(file_B)\n",
+    "\n",
+    "cmd = \"bedtools intersect -wa -wb -bed\"\n",
+    "cmd += \" -a \" + file_A\n",
+    "cmd += \" -b \" + \" \".join(file_B)\n",
+    "cmd += \" > \" + file_bed_out\n",
+    "\n",
+    "print(cmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "process = Popen(cmd, shell=True).wait()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>oligo_id</th>\n",
+       "      <th>snp_id</th>\n",
+       "      <th>region_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AARS1::1</td>\n",
+       "      <td>rs749554524</td>\n",
+       "      <td>AARS1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AARS1::1</td>\n",
+       "      <td>rs1295605832</td>\n",
+       "      <td>AARS1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AARS1::1</td>\n",
+       "      <td>rs755334113</td>\n",
+       "      <td>AARS1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AARS1::1</td>\n",
+       "      <td>rs373069396</td>\n",
+       "      <td>AARS1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AARS1::1</td>\n",
+       "      <td>rs1960244242</td>\n",
+       "      <td>AARS1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>453715</th>\n",
+       "      <td>WASIR2::1960</td>\n",
+       "      <td>rs1030129796</td>\n",
+       "      <td>WASIR2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>453716</th>\n",
+       "      <td>WASIR2::1960</td>\n",
+       "      <td>rs1250590943</td>\n",
+       "      <td>WASIR2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>453717</th>\n",
+       "      <td>WASIR2::1960</td>\n",
+       "      <td>rs1197079217</td>\n",
+       "      <td>WASIR2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>453718</th>\n",
+       "      <td>WASIR2::1960</td>\n",
+       "      <td>rs1456353780</td>\n",
+       "      <td>WASIR2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>453719</th>\n",
+       "      <td>WASIR2::1960</td>\n",
+       "      <td>rs1939793501</td>\n",
+       "      <td>WASIR2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>453720 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            oligo_id        snp_id region_id\n",
+       "0           AARS1::1   rs749554524     AARS1\n",
+       "1           AARS1::1  rs1295605832     AARS1\n",
+       "2           AARS1::1   rs755334113     AARS1\n",
+       "3           AARS1::1   rs373069396     AARS1\n",
+       "4           AARS1::1  rs1960244242     AARS1\n",
+       "...              ...           ...       ...\n",
+       "453715  WASIR2::1960  rs1030129796    WASIR2\n",
+       "453716  WASIR2::1960  rs1250590943    WASIR2\n",
+       "453717  WASIR2::1960  rs1197079217    WASIR2\n",
+       "453718  WASIR2::1960  rs1456353780    WASIR2\n",
+       "453719  WASIR2::1960  rs1939793501    WASIR2\n",
+       "\n",
+       "[453720 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "SEPARATOR_OLIGO_ID = \"::\"\n",
+    "search_results = pd.read_csv(\n",
+    "    filepath_or_buffer=file_bed_out,\n",
+    "    header=None,\n",
+    "    sep=\"\\t\",\n",
+    "    low_memory=False,\n",
+    "    engine=\"c\",\n",
+    "    usecols=[3,8],\n",
+    "    names=[\"oligo_id\", \"snp_id\"],\n",
+    ")\n",
+    "\n",
+    "search_results[\"region_id\"] = search_results[\"oligo_id\"].str.split(SEPARATOR_OLIGO_ID).str[0]\n",
+    "search_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>oligo_id</th>\n",
+       "      <th>snp_id</th>\n",
+       "      <th>region_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AARS1::1</td>\n",
+       "      <td>[rs749554524, rs1295605832, rs755334113, rs373...</td>\n",
+       "      <td>AARS1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AARS1::10</td>\n",
+       "      <td>[rs1388493313, rs147433234, rs749554524, rs129...</td>\n",
+       "      <td>AARS1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AARS1::100</td>\n",
+       "      <td>[rs147433234, rs749554524, rs1295605832, rs755...</td>\n",
+       "      <td>AARS1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AARS1::1000</td>\n",
+       "      <td>[rs1295970458, rs1960068371, rs762373456, rs12...</td>\n",
+       "      <td>AARS1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AARS1::1001</td>\n",
+       "      <td>[rs774810867, rs1295970458, rs1960068371, rs76...</td>\n",
+       "      <td>AARS1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26562</th>\n",
+       "      <td>WASIR2::995</td>\n",
+       "      <td>[rs372330566, rs1897139288, rs535254974, rs146...</td>\n",
+       "      <td>WASIR2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26563</th>\n",
+       "      <td>WASIR2::996</td>\n",
+       "      <td>[rs1897139288, rs535254974, rs1465620309, rs18...</td>\n",
+       "      <td>WASIR2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26564</th>\n",
+       "      <td>WASIR2::997</td>\n",
+       "      <td>[rs1897139288, rs535254974, rs1465620309, rs18...</td>\n",
+       "      <td>WASIR2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26565</th>\n",
+       "      <td>WASIR2::998</td>\n",
+       "      <td>[rs535254974, rs1465620309, rs1897139356, rs18...</td>\n",
+       "      <td>WASIR2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26566</th>\n",
+       "      <td>WASIR2::999</td>\n",
+       "      <td>[rs535254974, rs1465620309, rs1897139356, rs18...</td>\n",
+       "      <td>WASIR2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>26567 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          oligo_id                                             snp_id  \\\n",
+       "0         AARS1::1  [rs749554524, rs1295605832, rs755334113, rs373...   \n",
+       "1        AARS1::10  [rs1388493313, rs147433234, rs749554524, rs129...   \n",
+       "2       AARS1::100  [rs147433234, rs749554524, rs1295605832, rs755...   \n",
+       "3      AARS1::1000  [rs1295970458, rs1960068371, rs762373456, rs12...   \n",
+       "4      AARS1::1001  [rs774810867, rs1295970458, rs1960068371, rs76...   \n",
+       "...            ...                                                ...   \n",
+       "26562  WASIR2::995  [rs372330566, rs1897139288, rs535254974, rs146...   \n",
+       "26563  WASIR2::996  [rs1897139288, rs535254974, rs1465620309, rs18...   \n",
+       "26564  WASIR2::997  [rs1897139288, rs535254974, rs1465620309, rs18...   \n",
+       "26565  WASIR2::998  [rs535254974, rs1465620309, rs1897139356, rs18...   \n",
+       "26566  WASIR2::999  [rs535254974, rs1465620309, rs1897139356, rs18...   \n",
+       "\n",
+       "      region_id  \n",
+       "0         AARS1  \n",
+       "1         AARS1  \n",
+       "2         AARS1  \n",
+       "3         AARS1  \n",
+       "4         AARS1  \n",
+       "...         ...  \n",
+       "26562    WASIR2  \n",
+       "26563    WASIR2  \n",
+       "26564    WASIR2  \n",
+       "26565    WASIR2  \n",
+       "26566    WASIR2  \n",
+       "\n",
+       "[26567 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search_results = (\n",
+    "    search_results.groupby(\"oligo_id\", as_index=False)\n",
+    "      .agg({\n",
+    "          \"snp_id\": list,             # store all matching snp_id entries as a list\n",
+    "          \"region_id\": \"first\"        # or any aggregator (min, max, etc.) since they should be the same\n",
+    "      })\n",
+    ")\n",
+    "search_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['test', 'g', 'f']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li = []\n",
+    "li.append(\"test\")\n",
+    "li.extend([\"g\", \"f\"])\n",
+    "li"
    ]
   },
   {
